--- a/index.html
+++ b/index.html
@@ -8,18 +8,37 @@
       <link rel="stylesheet" href="src/styles.css" />
     </head>
     <body>
-      <h1>World Clock</h1>
-      <footer>
-        This project was coded by
-        <a href="https://github.com/domsmutku" target="_blank"
-          >Natalia Zientek</a
-        >, is open sourced on
-        <a href="https://github.com/domsmutku/poem-generator" target="_blank"
-          >Github</a
-        >
-        and hosted on
-        <a href="https://nuit-d-enfer.netlify.app/" target="_blank">Netlify</a>.
-      </footer>
+      <div class="container">
+        <h1>World Clock</h1>
+        <select>
+          <option value="">Select a city...</option>
+          <option value="">London</option>
+          <option value="">New York</option>
+          <option value="">Warsaw</option>
+        </select>
+        <div class="cities">
+          <h2>London</h2>
+          <div class="date">August 15th 2022</div>
+          <div class="time">3:45:14 PM</div>
+          <h2>New York</h2>
+          <div class="date">August 15th 2022</div>
+          <div class="time">3:45:14 PM</div>
+          <h2>Warsaw</h2>
+          <div class="date">August 15th 2022</div>
+          <div class="time">3:45:14 PM</div>
+        </div>
+        <footer>
+          This project was coded by
+          <a href="https://github.com/domsmutku" target="_blank"
+            >Natalia Zientek</a
+          >, is open sourced on
+          <a href="https://github.com/domsmutku/poem-generator" target="_blank"
+            >Github</a
+          >
+          and hosted on
+          <a href="https://work-like-a-clock.netlify.app/">Netlify</a>.
+        </footer>
+      </div>
       <script src="src/javascript.js"></script>
     </body>
   </html>
