Add CSS styling

--- a/index.html
+++ b/index.html
@@ -6,27 +6,45 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>World Clock</title>
       <link rel="stylesheet" href="src/styles.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap"
+        rel="stylesheet"
+      />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet"
+      />
     </head>
     <body>
       <div class="container">
-        <h1>World Clock</h1>
-        <select>
-          <option value="">Select a city...</option>
-          <option value="">London</option>
-          <option value="">New York</option>
-          <option value="">Warsaw</option>
-        </select>
-        <div class="cities">
-          <h2>London</h2>
+      <h1>World Clock</h1>
+
+      <select class="select">
+        <option value="" class="option">Select a city..</option>
+        <option value="" class="option">London</option>
+        <option value="" class="option">New York</option>
+        <option value="" class="option">Auckland</option>
+      </select>
+
+      <div class="city">
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
           <div class="date">August 15th 2022</div>
-          <div class="time">3:45:14 PM</div>
-          <h2>New York</h2>
-          <div class="date">August 15th 2022</div>
-          <div class="time">3:45:14 PM</div>
-          <h2>Warsaw</h2>
-          <div class="date">August 15th 2022</div>
-          <div class="time">3:45:14 PM</div>
         </div>
+        <div class="time">1:48:15 <small> AM </small></div>
+      </div>
+      <div class="city">
+        <div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
+      </div>
+    </div>
         <footer>
           This project was coded by
           <a href="https://github.com/domsmutku" target="_blank"
