--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>World Clock</title>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-10-year-range.min.js"></script>
       <link rel="stylesheet" href="src/styles.css" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,30 +23,31 @@
     </head>
     <body>
       <div class="container">
-      <h1>World Clock</h1>
+        <h1>World Clock</h1>
 
-      <select class="select">
-        <option value="" class="option">Select a city..</option>
-        <option value="" class="option">London</option>
-        <option value="" class="option">New York</option>
-        <option value="" class="option">Auckland</option>
-      </select>
+        <select class="select" id="city">
+          <option value="" class="option">Select a city..</option>
+          <option value="Europe/London" class="option">London</option>
+          <option value="America/New_York" class="option">New York</option>
+          <option value="Pacific/Auckland" class="option">Auckland</option>
+        </select>
 
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date"></div>
+        <div id="cities">
+          <div class="city" id="los-angeles">
+            <div>
+              <h2>Los Angeles 🇺🇸</h2>
+              <div class="date"></div>
+            </div>
+            <div class="time"></div>
+          </div>
+          <div class="city" id="paris">
+            <div>
+              <h2>Paris 🇫🇷</h2>
+              <div class="date"></div>
+            </div>
+            <div class="time"></div>
+          </div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="paris">
-        <div>
-          <h2>Paris 🇫🇷</h2>
-          <div class="date"></div>
-        </div>
-        <div class="time"></div>
-      </div>
-    </div>
         <footer>
           This project was coded by
           <a href="https://github.com/domsmutku" target="_blank"
