Add current location functionality

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         <select class="select" id="city">
           <option value="" class="option">Select a city..</option>
+          <option value="current" class="option">My current location</option>
           <option value="Europe/London" class="option">London</option>
           <option value="America/New_York" class="option">New York</option>
           <option value="Pacific/Auckland" class="option">Auckland</option>
