--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </head>
     <body>
       <div class="container">
-        <h1>World Clock</h1>
+        <h1>
+          <a href="/">World Clock</a>
+        </h1>
 
         <select class="select" id="city">
           <option value="" class="option">Select a city..</option>
@@ -36,14 +38,14 @@
         <div id="cities">
           <div class="city" id="los-angeles">
             <div>
-              <h2>Los Angeles 🇺🇸</h2>
+              <h2>Los Angeles</h2>
               <div class="date"></div>
             </div>
             <div class="time"></div>
           </div>
           <div class="city" id="paris">
             <div>
-              <h2>Paris 🇫🇷</h2>
+              <h2>Paris</h2>
               <div class="date"></div>
             </div>
             <div class="time"></div>
