Add third city and change drop down options

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <select class="select" id="city">
           <option value="" class="option">Select a city..</option>
           <option value="current" class="option">My current location</option>
-          <option value="Europe/London" class="option">London</option>
-          <option value="America/New_York" class="option">New York</option>
-          <option value="Pacific/Auckland" class="option">Auckland</option>
+          <option value="Europe/Prague" class="option">Prague</option>
+          <option value="Europe/Budapest" class="option">Budapest</option>
+          <option value="Europe/Kiev" class="option">Kiev</option>
         </select>
 
         <div id="cities">
@@ -46,6 +46,13 @@
           <div class="city" id="paris">
             <div>
               <h2>Paris</h2>
+              <div class="date"></div>
+            </div>
+            <div class="time"></div>
+          </div>
+          <div class="city" id="london">
+            <div>
+              <h2>London</h2>
               <div class="date"></div>
             </div>
             <div class="time"></div>
